# Greybird-Chalk

./: README.md  meson.build  meson_options.txt
Chalk/: index.theme  meson.build
Chalk/gnome-shell/: gnome-shell.css
Chalk/gtk-3.0/: _colors.scss
terminal-theme/: Chalkboard.theme
